examples/invalid/non_exhaustive_match.lby
# non_exhaustive_match.lby — a `match` that omits an enum variant.
# `Empty` has no arm and there is no `_` wildcard, so the match is
# non-exhaustive and `lullaby check` rejects it.
enum Shape
    Circle i64
    Empty

fn area s Shape -> i64
    match s
        Circle(r) -> r * r

fn main -> i64
    area(Circle(2))
